--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "test": "test"
   },
   "devDependencies": {
-    "MD5": "^1.2.1",
     "bower": "^1.3.12",
     "fs-extra": "^0.16.5",
     "grunt-bower-install": "^1.6.0",
@@ -48,7 +47,7 @@
     "jsdoc": "^3.3.0-beta2",
     "jshint-stylish": "~1.0.1",
     "json": "^9.0.3",
-    "karma": "^0.12.31",
+    "karma": "^0.12.37",
     "karma-chrome-launcher": "~0.1.7",
     "karma-coverage": "~0.2.7",
     "karma-firefox-launcher": "~0.1.4",
@@ -58,12 +57,13 @@
     "karma-safari-launcher": "~0.1.1",
     "karma-script-launcher": "~0.1.0",
     "load-grunt-tasks": "~3.1.0",
+    "MD5": "^1.2.1",
     "phantom": "^0.7.2",
     "time-grunt": "~1.1.0"
   },
   "peerDependencies": {
-    "karma": ">=0.10",
-    "grunt": ">=0.4"
+    "grunt": ">=0.4",
+    "karma": ">=0.10"
   },
   "scripts": {
     "test": "grunt test"
